# pygerrit

./: Makefile  README.rst  doc_requirements.txt  example.py  requirements.txt  rest_example.py  setup.cfg  setup.py  test_requirements.txt  unittests.py
pygerrit/: client.py  models.py  ssh.py  stream.py
pygerrit/rest/: __init__.py
